# transformer-stuff

./: .gitignore  Cargo.toml  Makefile  baseline.cpp  baseline.h  compile.sh  cuda.cu  cuda.h  cuda_example.cpp  cuda_example.cu  fill_copy_sequence.cpp  fill_copy_sequence.h  ggml-cuda.cu  ggml-cuda.h  ggml.c  ggml.h  hip.cpp  llama-util.h  llama.cpp  llama.h  loading.cpp  loading.h  matrix_multiplication.cpp  model.h  shell.nix  sizing.ts  temp.hip  test.cpp
cpp_stuff/: Cargo.toml  build-base.ninja  build.ninja  build.rs
cpp_stuff/cpp_src/: CMakeLists.txt  baseline.cpp  baseline.h  cuda.cu  cuda.h  hip.cpp  hip.h  llama.cpp  loading.cpp  loading.h  model.cpp  model.h  wrapper.h
cpp_stuff/src/: example.cpp  example.h  lib.rs  llama.h  loading.h  wrapper.h
cpp_stuff_nice/: Cargo.toml
cpp_stuff_nice/src/: lib.rs
toy/: .gitignore  Cargo.toml
toy/src/: loader.rs  main.rs  model.rs  prediction.rs  tree.rs  ui.rs  vocab.rs
