[package]
name = "toy"
version = "0.1.0"
edition = "2021"

[dependencies]
cpp_stuff_nice = { path = "../cpp_stuff_nice" }
ggml = "0.1.1"
half = { version = "2.2.1", features = ["use-intrinsics"] }
indicatif = "0.17.5"
llm-base = "0.1.1"
llm-llama = "0.1.1"
nannou = { git = "https://github.com/nannou-org/nannou.git" }
rand = "0.8.5"
rand_distr = "0.4.3"
rayon = "1.7.0"
regex = "1.9.1"
regex-automata = "0.3.3"
tracing = "0.1.37"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.17"
